Added terminal loop for settings, fixed if statements, init git users at end

--- a/windows-terminal-settings.jsonc
+++ b/windows-terminal-settings.jsonc
@@ -39,7 +39,7 @@
       "fontFace": "Cascadia Code",
       "fontSize": 14,
       // "background": "#3330008e",
-      "closeOnExit": true
+      "closeOnExit": false
     },
     "list": [
       {
